--- a/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connection/connection.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connection/connection.fxml
@@ -4,19 +4,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
 <fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0" stylesheets="@../../../styles.css" type="VBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" spacing="10.0">
+      <HBox fx:id="buttons" alignment="CENTER" spacing="10.0">
          <children>
             <Label fx:id="uri" contentDisplay="RIGHT" />
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="browse" mnemonicParsing="false" onAction="#onBrowseClicked" text="%ConnectionsManager.Connection.browse" />
-            <Button fx:id="connection" mnemonicParsing="false" onAction="#onConnectionClicked" text="%ConnectionsManager.Connection.connect" />
-            <Button fx:id="remove" layoutX="550.0" layoutY="10.0" mnemonicParsing="false" onAction="#onRemoveClicked" text="%ConnectionsManager.Connection.removeClient" />
+            <Button fx:id="browse" mnemonicParsing="false" onAction="#onBrowseClicked" text="%ConnectionsManager.Connection.browse">
+               <tooltip>
+                  <Tooltip text="%ConnectionsManager.Connection.browseDescription" />
+               </tooltip></Button>
+            <Button fx:id="connect" mnemonicParsing="false" onAction="#onConnectClicked" text="%ConnectionsManager.Connection.connect">
+               <tooltip>
+                  <Tooltip text="%ConnectionsManager.Connection.connectDescription" />
+               </tooltip></Button>
+            <Button fx:id="login" mnemonicParsing="false" onAction="#onLoginClicked" text="%ConnectionsManager.Connection.login">
+               <tooltip>
+                  <Tooltip text="%ConnectionsManager.Connection.loginDescription" />
+               </tooltip></Button>
+            <Button fx:id="disconnect" mnemonicParsing="false" onAction="#onDisconnectClicked" text="%ConnectionsManager.Connection.disconnect">
+               <tooltip>
+                  <Tooltip text="%ConnectionsManager.Connection.disconnectDescription" />
+               </tooltip></Button>
+            <Button fx:id="remove" mnemonicParsing="false" onAction="#onRemoveClicked" text="%ConnectionsManager.Connection.removeClient">
+               <tooltip>
+                  <Tooltip text="%ConnectionsManager.Connection.removeDescription" />
+               </tooltip></Button>
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
