--- a/src/main/resources/qupath/ext/omero/gui/browser/serverbrowser/settings/settings.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/serverbrowser/settings/settings.fxml
@@ -24,6 +24,7 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <padding>
                     <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
@@ -48,7 +49,17 @@
                   <Tooltip text="%Browser.ServerBrowser.Settings.webJpegQualityDescription" />
                </tooltip>
             </TextField>
-                <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+            <Label text="%Browser.ServerBrowser.Settings.omeroServerAddress" GridPane.rowIndex="2">
+               <tooltip>
+                  <Tooltip text="%Browser.ServerBrowser.Settings.omeroServerAddressDescription" />
+               </tooltip>
+            </Label>
+            <TextField fx:id="omeroAddress" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <tooltip>
+                  <Tooltip text="%Browser.ServerBrowser.Settings.omeroServerAddressDescription" />
+               </tooltip>
+            </TextField>
+                <HBox alignment="CENTER_RIGHT" spacing="10.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                     <Button mnemonicParsing="false" onAction="#onOKClicked" text="%Browser.ServerBrowser.Settings.ok" />
                     <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%Browser.ServerBrowser.Settings.cancel" />
                     <Button mnemonicParsing="false" onAction="#onApplyClicked" text="%Browser.ServerBrowser.Settings.apply" />
