--- a/src/main/resources/qupath/ext/omero/gui/browser/serverbrowser/hierarchy/image_tooltip.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/serverbrowser/hierarchy/image_tooltip.fxml
@@ -2,18 +2,12 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-         stylesheets="@../../../../styles.css" type="VBox" xmlns="http://javafx.com/javafx/19"
-         xmlns:fx="http://javafx.com/fxml/1">
-   <HBox>
-      <Canvas fx:id="canvas" height="100.0" width="100.0"/>
-      <Label fx:id="name"/>
-   </HBox>
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../../../../styles.css" type="VBox" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <Canvas fx:id="canvas" height="100.0" width="100.0" />
    <VBox fx:id="errorContainer" styleClass="invalid-image">
-      <Label styleClass="invalid-image" text="Image not supported:"/>
-      <VBox fx:id="errors"/>
+      <Label styleClass="invalid-image" text="Image not supported:" />
+      <VBox fx:id="errors" />
    </VBox>
 </fx:root>
