--- a/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connection/connection.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/connectionsmanager/connection/connection.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.Tooltip?>
@@ -45,6 +46,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
+      <CheckBox fx:id="skipAuthentication" mnemonicParsing="false" onAction="#onSkipAuthenticationClicked" text="%ConnectionsManager.Connection.skipAuthentication" />
       <TitledPane fx:id="imagesPane" expanded="false" text="%ConnectionsManager.Connection.noImage">
          <content>
             <VBox fx:id="imagesContainer" spacing="5.0" />
