--- a/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
@@ -27,7 +27,7 @@
 
 <fx:root title="%Browser.ServerBrowser.omeroWebServer" type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
-        <Scene stylesheets="@../../styles.css">
+        <Scene stylesheets="@../styles.css">
             <BorderPane>
             <top>
                 <HBox alignment="CENTER" BorderPane.alignment="CENTER">
