--- a/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
@@ -57,25 +57,26 @@
                             </font>
                         </Label>
                         <Label text="%Browser.ServerBrowser.username" GridPane.rowIndex="1" />
-                     <HBox fx:id="usernameContainer" alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                        <children>
-                              <Label fx:id="username">
-                                  <font>
-                                      <Font name="System Bold" size="13.0" />
-                                  </font>
-                              </Label>
-                           <Button fx:id="login" mnemonicParsing="false" onAction="#onLoginClicked" text="%Browser.ServerBrowser.login">
-                              <tooltip>
-                                 <Tooltip text="%Browser.ServerBrowser.loginDescription" />
-                              </tooltip>
-                           </Button>
-                           <Button fx:id="logout" mnemonicParsing="false" onAction="#onLogoutClicked" text="%Browser.ServerBrowser.logout">
-                              <tooltip>
-                                 <Tooltip text="%Browser.ServerBrowser.logoutDescription" />
-                              </tooltip>
-                           </Button>
-                        </children>
-                     </HBox>
+                        <HBox fx:id="usernameContainer" alignment="CENTER_LEFT" spacing="10.0" GridPane.columnIndex="1"
+                              GridPane.rowIndex="1">
+                            <Label fx:id="username">
+                                <font>
+                                    <Font name="System Bold" size="13.0"/>
+                                </font>
+                            </Label>
+                            <Button fx:id="login" mnemonicParsing="false" onAction="#onLoginClicked"
+                                    text="%Browser.ServerBrowser.login">
+                                <tooltip>
+                                    <Tooltip text="%Browser.ServerBrowser.loginDescription"/>
+                                </tooltip>
+                            </Button>
+                            <Button fx:id="logout" mnemonicParsing="false" onAction="#onLogoutClicked"
+                                    text="%Browser.ServerBrowser.logout">
+                                <tooltip>
+                                    <Tooltip text="%Browser.ServerBrowser.logoutDescription"/>
+                                </tooltip>
+                            </Button>
+                        </HBox>
                         <Label text="%Browser.ServerBrowser.openedImages" GridPane.rowIndex="2" />
                         <Label fx:id="numberOpenImages" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <font>
