--- a/src/main/resources/qupath/ext/omero/gui/login/login_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/login/login_form.fxml
@@ -17,34 +17,34 @@
     <scene>
         <Scene>
             <VBox alignment="TOP_CENTER" prefWidth="400.0" spacing="20.0">
-            <children>
-               <Label text="%Login.LoginForm.createConnection" />
-               <GridPane hgap="10.0">
-                 <columnConstraints>
-                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                   <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                 </columnConstraints>
-                 <rowConstraints>
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                 </rowConstraints>
-                  <children>
-                     <Label text="%Login.LoginForm.webServerUrl" />
-                     <TextField fx:id="url" promptText="%Login.LoginForm.webServerUrl" GridPane.columnIndex="1" />
-                     <CheckBox fx:id="publicUser" mnemonicParsing="false" text="%Login.LoginForm.logInPublicUser" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                     <Label text="%Login.LoginForm.username" GridPane.rowIndex="2" />
-                     <TextField fx:id="username" promptText="%Login.LoginForm.username" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                     <Label text="%Login.LoginForm.password" GridPane.rowIndex="3" />
-                     <PasswordField fx:id="password" promptText="%Login.LoginForm.password" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  </children>
-               </GridPane>
-               <Button mnemonicParsing="false" onAction="#onConnectClicked" text="%Login.LoginForm.connect" />
-            </children>
-            <padding>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </padding></VBox>
+                <padding>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </padding>
+                <Label text="%Login.LoginForm.createConnection"/>
+                <GridPane hgap="10.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <Label text="%Login.LoginForm.webServerUrl"/>
+                    <TextField fx:id="url" promptText="%Login.LoginForm.webServerUrl" GridPane.columnIndex="1"/>
+                    <CheckBox fx:id="publicUser" mnemonicParsing="false" text="%Login.LoginForm.logInPublicUser"
+                              GridPane.columnSpan="2147483647" GridPane.rowIndex="1"/>
+                    <Label text="%Login.LoginForm.username" GridPane.rowIndex="2"/>
+                    <TextField fx:id="username" promptText="%Login.LoginForm.username" GridPane.columnIndex="1"
+                               GridPane.rowIndex="2"/>
+                    <Label text="%Login.LoginForm.password" GridPane.rowIndex="3"/>
+                    <PasswordField fx:id="password" promptText="%Login.LoginForm.password" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="3"/>
+                </GridPane>
+                <Button mnemonicParsing="false" onAction="#onConnectClicked" text="%Login.LoginForm.connect"/>
+            </VBox>
         </Scene>
     </scene>
 </fx:root>
