--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/key_values_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/key_values_form.fxml
@@ -6,13 +6,14 @@
 <?import javafx.scene.layout.VBox?>
 
 <fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-    <children>
-        <Label text="%DataTransporters.Forms.KeyValues.selectUpdateOptions">
-         <VBox.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </VBox.margin></Label>
-        <RadioButton fx:id="keepExisting" mnemonicParsing="false" text="%DataTransporters.Forms.KeyValues.keepExisting" />
-        <RadioButton fx:id="replaceExisting" mnemonicParsing="false" text="%DataTransporters.Forms.KeyValues.replaceExisting" />
-        <RadioButton fx:id="deleteAll" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.KeyValues.deleteAll" />
-    </children>
+    <Label text="%DataTransporters.Forms.KeyValues.selectUpdateOptions">
+        <VBox.margin>
+        <Insets bottom="5.0" top="5.0"/>
+        </VBox.margin>
+    </Label>
+    <RadioButton fx:id="keepExisting" mnemonicParsing="false" text="%DataTransporters.Forms.KeyValues.keepExisting"/>
+    <RadioButton fx:id="replaceExisting" mnemonicParsing="false"
+                 text="%DataTransporters.Forms.KeyValues.replaceExisting"/>
+    <RadioButton fx:id="deleteAll" mnemonicParsing="false" selected="true"
+                 text="%DataTransporters.Forms.KeyValues.deleteAll"/>
 </fx:root>
