--- a/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
@@ -7,7 +7,7 @@
 
 <fx:root type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
-        <Scene stylesheets="@../../../../styles.css">
+        <Scene stylesheets="@../../styles.css">
             <ScrollPane>
                 <VBox fx:id="content" spacing="10.0" />
             </ScrollPane>
