--- a/src/main/resources/qupath/ext/omero/gui/browser/advancedsearch/advanced_search.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/advancedsearch/advanced_search.fxml
@@ -20,7 +20,7 @@
 
 <fx:root type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
-        <Scene stylesheets="@../../../../styles.css">
+        <Scene stylesheets="@../../styles.css">
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity">
                 <VBox spacing="10.0">
                     <HBox.margin>
