--- a/src/main/resources/qupath/ext/omero/gui/browser/settings/settings.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/settings/settings.fxml
@@ -15,7 +15,7 @@
 
 <fx:root title="%Browser.ServerBrowser.Settings.title" type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
-        <Scene stylesheets="@../../../../styles.css">
+        <Scene stylesheets="@../../styles.css">
             <VBox>
             <VBox>
                <children>
