--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_annotation_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_annotation_form.fxml
@@ -5,14 +5,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-   <children>
-      <Label text="%DataTransporters.Forms.ImportAnnotations.selectImportOptions">
-         <VBox.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </VBox.margin>
-      </Label>
-      <CheckBox fx:id="deleteAnnotations" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations" />
-      <CheckBox fx:id="deleteDetections" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections" />
-   </children>
+<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+   <Label text="%DataTransporters.Forms.ImportAnnotations.selectImportOptions">
+      <VBox.margin>
+         <Insets bottom="5.0" top="5.0"/>
+      </VBox.margin>
+   </Label>
+   <CheckBox fx:id="deleteAnnotations" mnemonicParsing="false" selected="true"
+             text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations"/>
+   <CheckBox fx:id="deleteDetections" mnemonicParsing="false" selected="true"
+             text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections"/>
 </fx:root>
