--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_annotation_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_annotation_form.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-         spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-   <Label text="%DataTransporters.Forms.ImportAnnotations.selectImportOptions">
-      <VBox.margin>
-         <Insets bottom="5.0" top="5.0"/>
-      </VBox.margin>
-   </Label>
-   <CheckBox fx:id="deleteAnnotations" mnemonicParsing="false" selected="true"
-             text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations"/>
-   <CheckBox fx:id="deleteDetections" mnemonicParsing="false" selected="true"
-             text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections"/>
+<fx:root alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <HBox alignment="CENTER_LEFT" spacing="10.0">
+      <Label text="%DataTransporters.Forms.ImportAnnotations.importAnnotationsFrom"/>
+      <ChoiceBox fx:id="owner" prefWidth="150.0"/>
+   </HBox>
+   <CheckBox fx:id="deleteAnnotations" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentAnnotations" />
+   <CheckBox fx:id="deleteDetections" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.ImportAnnotations.deleteCurrentDetections" />
 </fx:root>
