Fix sample script

--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/send_annotation_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/send_annotation_form.fxml
@@ -13,9 +13,8 @@
       <ChoiceBox fx:id="selectedAnnotationChoice" />
    </HBox>
    <HBox alignment="CENTER_LEFT" spacing="10.0">
-      <CheckBox fx:id="deleteExistingAnnotations" mnemonicParsing="false" selected="true"
-                text="%DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations"/>
-      <ChoiceBox fx:id="owner" prefWidth="150.0"/>
+      <CheckBox fx:id="deleteExistingAnnotations" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.SendAnnotations.deleteExistingAnnotations" />
+      <ChoiceBox fx:id="owner" prefWidth="150.0" />
    </HBox>
    <Pane prefHeight="20.0" />
    <CheckBox fx:id="deleteExistingMeasurements" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.SendAnnotations.deleteExistingMeasurements" />
