--- a/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/browser.fxml
@@ -25,7 +25,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.stage.Stage?>
 
-<fx:root title="%Browser.ServerBrowser.omeroWebServer" type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root title="%Browser.ServerBrowser.omeroBrowser" type="Stage" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene stylesheets="@../styles.css">
             <BorderPane>
