--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_key_value_pairs_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_key_value_pairs_form.fxml
@@ -4,10 +4,12 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.CheckComboBox?>
 
 <fx:root spacing="20.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <HBox fx:id="namespaceContainer" alignment="CENTER_LEFT" spacing="10.0">
+   <HBox alignment="CENTER_LEFT" spacing="10.0">
       <Label text="%DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces" />
+      <CheckComboBox fx:id="namespace" maxWidth="200"/>
    </HBox>
    <VBox spacing="10.0">
       <RadioButton fx:id="keepExisting" mnemonicParsing="false" selected="true" text="%DataTransporters.Forms.ImportKeyValuePairs.keepExisting" />
