--- a/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_key_value_pairs_form.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/datatransporters/forms/import_key_value_pairs_form.fxml
@@ -7,7 +7,7 @@
 <?import org.controlsfx.control.CheckComboBox?>
 
 <fx:root spacing="20.0" type="VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <HBox alignment="CENTER_LEFT" spacing="10.0">
+   <HBox fx:id="namespaceContainer" alignment="CENTER_LEFT" spacing="10.0">
       <Label text="%DataTransporters.Forms.ImportKeyValuePairs.selectNamespaces" />
       <CheckComboBox fx:id="namespace" maxWidth="200"/>
    </HBox>
