--- a/src/main/resources/qupath/ext/omero/gui/browser/advancedsearch/advanced_search.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/advancedsearch/advanced_search.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root type="Stage" width="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root title="%Browser.ServerBrowser.AdvancedSearch.advancedSearch" type="Stage" width="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene stylesheets="@../../styles.css">
             <HBox>
