--- a/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/settings.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -12,6 +11,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
+<?import javafx.scene.control.TextField?>
 
 <fx:root title="%Browser.ServerBrowser.Settings.title" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
@@ -35,11 +36,11 @@
                            <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription" />
                         </tooltip>
                      </Label>
-                     <TextField fx:id="webJpegQuality" layoutX="564.0" layoutY="27.0" GridPane.columnIndex="1">
+                     <CustomTextField fx:id="webJpegQuality" layoutX="564.0" layoutY="27.0" GridPane.columnIndex="1">
                         <tooltip>
                            <Tooltip text="%Browser.ServerBrowser.Settings.webAPIJpegQualityDescription" />
                         </tooltip>
-                     </TextField>
+                     </CustomTextField>
                   </GridPane>
                </VBox>
                <VBox>
