--- a/src/main/resources/qupath/ext/omero/gui/styles.css
+++ b/src/main/resources/qupath/ext/omero/gui/styles.css
@@ -18,7 +18,7 @@
     -fx-font-weight: bold;
 }
 
-.table-cell {
+.search-results .table-cell {
     -fx-alignment: center;
     -fx-padding: 2 5 2 5;
 }
