Fixed prompt authentication when importing project / dataset

--- a/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
+++ b/src/main/resources/qupath/ext/omero/gui/browser/advancedinformation/advanced_information.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
-<fx:root height="800.0" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="800.0" type="Stage" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <scene>
         <Scene stylesheets="@../../styles.css">
             <ScrollPane>
-                <VBox fx:id="content" spacing="10.0" />
+                <VBox fx:id="content" spacing="10.0">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding></VBox>
             </ScrollPane>
         </Scene>
     </scene>
